etc/iptables.conf
# Generated by iptables-save v1.6.0 on Sat Aug 25 00:58:07 2018
# https://askubuntu.com/questions/868334/block-china-with-iptables
*filter
:INPUT ACCEPT [49:7583]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [183:19487]
:sshguard - [0:0]
-A INPUT -i lo -p tcp -m tcp --dport 4711:4720 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -j sshguard
-A INPUT -p udp -m udp --dport 53 -m limit --limit 5/sec -j LOG --log-prefix "fw-dns " --log-level 7
-A INPUT -p udp --dport 53 -m string --from 50 --algo bm --hex-string '|0000FF0001|' -m recent --set --name dnsanyquery --mask 255.255.255.255
-A INPUT -p udp --dport 53 -m string --from 50 --algo bm --hex-string '|0000FF0001|' -m recent --name dnsanyquery --rcheck --seconds 1 --hitcount 1 -j DROP --mask 255.255.255.255
-A INPUT -s 141.212.121.0/24 -j DROP
-A INPUT -s 141.212.122.0/24 -j DROP
-A INPUT -s 141.212.123.0/24 -j DROP
-A sshguard -s 5.135.139.134/32 -j DROP
-A OUTPUT -j ACCEPT
-A INPUT -j DROP
-A FORWARD -J DROP
COMMIT
# Completed on Sat Aug 25 00:58:07 2018
